fix scaleType, reduce font size

--- a/android/app/src/main/res/layout/layout.xml
+++ b/android/app/src/main/res/layout/layout.xml
@@ -33,7 +33,8 @@
                     android:id="@+id/__SPECIFIC_ID_1__"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
-                    android:contentDescription="Image"
+                    android:contentDescription="Image"                    
+                    android:scaleType="centerCrop"
                     app:imageUrl="__IMAGE_1__"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +60,7 @@
                     android:layout_marginEnd="8dp"
                     android:scrollbars="none"
                     android:text="__TEXT_2__"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                     android:textColor="?colorOnSurface"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/__SPECIFIC_ID_1__"
