Add parallax effect

--- a/android/app/src/main/res/layout/layout.xml
+++ b/android/app/src/main/res/layout/layout.xml
@@ -29,17 +29,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <ImageView
+                <com.qmobile.qmobileui.ui.parallax.VerticalScrollParallaxImageView
                     android:id="@+id/__SPECIFIC_ID_1__"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
-                    android:contentDescription="Image"                    
+                    android:contentDescription="Image"
                     android:scaleType="centerCrop"
                     app:imageUrl="__IMAGE_1__"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:background="@tools:sample/avatars" />
+                    tools:background="@tools:sample/avatars"
+                    tools:ignore="MissingClass" />
 
                 <View
                     android:id="@+id/left_cut_header"
